--- a/upload/admin/view/stylesheet/pay.css
+++ b/upload/admin/view/stylesheet/pay.css
@@ -33,3 +33,13 @@
     cursor: pointer;
     text-align: right;
 }
+
+.btn-advanced{
+    color: black;
+    background-color: #dcdcdc;
+    font-weight: 600;
+}
+
+.btn-advanced:hover{
+    color: black;
+}
