--- a/upload/admin/view/template/extension/payment/paynl3.twig
+++ b/upload/admin/view/template/extension/payment/paynl3.twig
@@ -95,7 +95,8 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2" id="show_advanced_settings"><span class="btn btn-advanced">{{ text_advanced_settings }} <span class="advanced_button">[+]</span></span></label>
+                        <label class="col-sm-2" id="show_advanced_settings"><span
+                                    class="btn btn-advanced">{{ text_advanced_settings }} <span class="advanced_button">[+]</span></span></label>
                         <div class="col-sm-10"></div>
                     </div>
                     <div class="form-group advanced_settings">
