--- a/upload/admin/view/template/extension/payment/paynl3.twig
+++ b/upload/admin/view/template/extension/payment/paynl3.twig
@@ -130,6 +130,25 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label class="col-sm-2 control-label"
+                               for="payment_paynl_general_follow_payment_method">
+                            <span data-toggle="tooltip" title="{{ text_follow_payment_method_tooltip }}">
+                                {{ text_follow_payment_method }}
+                            </span></label>
+                        <div class="col-sm-10">
+                            <select name="payment_paynl_general_follow_payment_method"
+                                    id="payment_paynl_general_follow_payment_method" class="form-control">
+                                {% if follow_payment_method %}
+                                    <option value="1" selected="selected">{{ text_enabled }}</option>
+                                    <option value="0">{{ text_disabled }}</option>
+                                {% else %}
+                                    <option value="1">{{ text_enabled }}</option>
+                                    <option value="0" selected="selected">{{ text_disabled }}</option>
+                                {% endif %}
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label class="col-sm-2 control-label" for="payment_paynl_general_display_icon">
                             <span data-toggle="tooltip" title="{{ text_display_icon_tooltip }}">{{ text_display_icon }}</span>
                         </label>
