--- a/upload/admin/view/template/extension/payment/paynl3.twig
+++ b/upload/admin/view/template/extension/payment/paynl3.twig
@@ -113,6 +113,19 @@
                         </div>
 
                         <div id="dependent-fields" style="display: none;">
+                            <div class="form-group">
+                                <label class="col-sm-2 control-label">Show Button On</label>
+                                <div class="col-sm-10">
+                                    <div style="display: flex; gap: 10px;">
+                                        {% for place in button_places_list %}
+                                            <label class="checkbox-inline">
+                                                <input type="checkbox" name="{{ fast_checkout_button_places_name }}[]" value="{{ place.key }}" {% if place.key in fast_checkout_checked_button_places %}checked{% endif %}>
+                                                {{ place.value }}
+                                            </label>
+                                        {% endfor %}
+                                    </div>
+                                </div>
+                            </div>
                             <div class="form-group required">
                                 <label class="col-sm-2 control-label" for="{{ fast_checkout_default_shipping_name }}">
                                     {{ text_default_shipping_method }}
