--- a/upload/admin/view/template/extension/payment/paynl3.twig
+++ b/upload/admin/view/template/extension/payment/paynl3.twig
@@ -82,8 +82,8 @@
                         <label class="col-sm-2 control-label" for="payment_paynl_general_serviceid">{{ text_serviceid }}</label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control" name="payment_paynl_general_serviceid" value="{{ serviceid }}"/>
-                            {% if error_apitoken %}
-                                <div class="text-danger">{{ error_apitoken }}</div>
+                            {% if error_serviceid %}
+                                <div class="text-danger">{{ error_serviceid }}</div>
                             {% endif %}
                         </div>
                     </div>
