--- a/upload/admin/view/stylesheet/pay.css
+++ b/upload/admin/view/stylesheet/pay.css
@@ -29,7 +29,7 @@
     display: none;
 }
 
-#show_advanced_settings{
+#show_advanced_settings {
     cursor: pointer;
 }
 
@@ -43,7 +43,35 @@
     color: black;
 }
 
-#advanced_settings_icon{
+#advanced_settings_icon {
     margin-left: 5px;
     display: inline-block;
+}
+
+.obscuredInput {
+    text-security: disc;
+    -webkit-text-security: disc;
+    -moz-text-security: disc;
+}
+
+.obscuredInput.display {
+    text-security: none;
+    -webkit-text-security: none;
+    -moz-text-security: none;
+}
+
+.obscuredDisplayShow {
+    cursor: pointer;
+    background-image: url(../image/showPasswordIcon.png);
+    height: 20px;
+    width: 25px;
+    display: inline-block;
+    background-repeat: no-repeat;
+    background-size: 35px auto;
+    background-position: center center;
+    margin-top: 5px;
+    margin-left: 5px;
+    position: absolute;
+    top: 3px;
+    right: 30px;
 }
