Remove Status & update README & fix version check

--- a/upload/admin/view/stylesheet/payOrder.css
+++ b/upload/admin/view/stylesheet/payOrder.css
@@ -11,3 +11,13 @@
 .modal-backdrop{
     background-color: #00000080;
 }
+
+#payOrderButtonVoid {
+    background-color: #cf1e1e;
+    border-color: #a21818;
+}
+
+#payOrderButtonVoid:hover {
+    background-color: #a21818;
+    border-color: #490b0b;
+}
